# Html_Excel_Convertor

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
core/: settings.py  urls.py
main_app/: admin.py  forms.py  models.py
main_app/migrations/: 0001_initial.py
