[tool.poetry]
name = "valireya-task"
version = "0.1.0"
description = ""
authors = ["user <panpanzov.nur@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
xlwt = "^1.3.0"
xlsxwriter = "^3.1.9"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
virtualenvs-in-project = true
